fix: increase the z-index of the cell content

--- a/src/views/cell/cell.module.css
+++ b/src/views/cell/cell.module.css
@@ -21,6 +21,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    z-index: 1;
 }
 
 .cell-editing {
